# handwritten-digit-recognition

./: Cargo.toml  README.md  data.json
.github/workflows/: test-pull-request.yml
src/: main.rs
