[package]
name = "handwritten-digit-recognition"
version = "0.1.0"
authors = ["Dilshad <a-rustacean@outlook.com>"]
edition = "2021"

[dependencies]
mnist = "0.6.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
